hphp/hack/test/typecheck/dynamic_props2.php.exp
File "dynamic_props2.php", line 12, characters 11-21:
Cannot use dynamic class property name in strict mode (Naming[2076])
